fixed layout issues

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -40,8 +40,11 @@ section#sidebar{
 	display: none;
 }
 
-html *{
-	cursor: default;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
+*, *:before, *:after {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
 }
