--- a/client/css/meals.css
+++ b/client/css/meals.css
@@ -66,6 +66,10 @@ ul.meals li:hover{
 	-webkit-box-shadow: 0px 2px 0px #124b61;
 	border-bottom: 1px solid #6cb0ca;
 	border-right: 0;
+	-webkit-transition-property: border-color;
+	-webkit-transition-duration: .15s;
+	-webkit-transition-timing-function: ease-in-out;
+	-webkit-transition-delay: 0;
 }
 
 ul.meals li:hover span{
@@ -89,7 +93,6 @@ ul.meals li:hover button{
 	-webkit-transition-duration: .15s;
 	-webkit-transition-timing-function: ease-in-out;
 	-webkit-transition-delay: 0;
-
 }
 
 h3.category{
